--- a/app/src/main/res/layout/activity_reminders.xml
+++ b/app/src/main/res/layout/activity_reminders.xml
@@ -14,5 +14,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tv_hello_world"
-        android:text="Hello World!" />
+        android:text="Hello IntelliJ!" />
 </RelativeLayout>
