--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="darker_grey">#181818</color>
     <color name="green">#00ff00</color>
     <color name="white">#ffffff</color>
+    <color name="orange">#ffff381a</color>
 </resources>
